--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,6 @@ notifications:
 script:
   #Test unitario y de integracion con cobertura (jacoco)
   - mvn org.jacoco:jacoco-maven-plugin:prepare-agent verify
+
+  #SONARCLOUD
+  - mvn sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=soniabm -Dsonar.login=$SONAR
